Revised the Book and Page modules.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>ARF Utils</title>
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" http-equiv="Content-Type">
     <link rel="icon" type="image/png" href="images/favicon.png">
 
@@ -17,24 +17,34 @@
       QUnit.config.autostart = false;
     </script>
  
-    <!-- Load the experimental Progressbar module -->
-    <script src="modules/progressbar/progressbar.js"></script>
-
     <!-- Load the library stylesheets -->
     <link rel="stylesheet" type="text/css" href="lib/jquery-ui/jquery-ui.min.css">
 
      <!-- Load the current theme's stylesheet -->
     <link rel="stylesheet" type="text/css" href="themes/standard/standard.css">
 
+    <!-- Load the module libraries -->
+    <script src="modules/coq/lib/node_modules/jscoq/ui-js/jscoq-loader.js"></script>
+
+    <!-- Load the experimental Progressbar module -->
+    <script src="modules/progressbar/progressbar.js"></script>
+
     <!-- Load the Core Module -->
     <script src="modules/core/core.js"></script>
   </head>
+<div id="qunit"></div>
+<div id="qunit-fixture"></div>
   <body id="top">
     <div id='header'>
       <div id='header-content'>
         <div id='header-menu-container'>
           <div id='header-menu'>
-            <a class='menu-item header-menu-item' href='##intro'>INTRO</a>
+            <a class='menu-item header-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/home'>HOME</a>
+            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/nutrition'>NUTRITION</a>
+            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/health'>HEALTH</a>
+            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/practice'>PRACTICE</a>
+            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/study'>STUDY</a>
+            <a class='menu-item header-menu-item' href='data/arf.pdf'>FRAMEWORK</a>
           </div>
         </div>
       </div>
@@ -42,25 +52,20 @@
     <div id='mobile-menu'>
       <div id='mobile-menu-header'>MENU</div>
       <div id='mobile-menu-content'>
-        <a class='menu-item mobile-menu-item' href='##intro'>INTRO</a>
+        <a class='menu-item mobile-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/home'>HOME</a>
+        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/nutrition'>NUTRITION</a>
+        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/health'>HEALTH</a>
+        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/practice'>PRACTICE</a>
+        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/study'>STUDY</a>
+        <a class='menu-item mobile-menu-item' href='data/arf.pdf'>FRAMEWORK</a>
       </div>
     </div>
     <div id='body'>
-      <div id='main-content'>
-        <div id='title' class='section dark-section'>
-          <div class='section-content'>
-            <div id='intro-header' class='section-header'>
-              <h1></h1>
-            </div>
-            <div class='section-body'>
-            </div>
-          </div>
-        </div>
+      <div class='main-content'>
+        <div class='page_block'></div>
       </div>
     </div>
     <div id="back_to_top"><a href="#">Back To Top</a></div>
     <div id="footer"></div>
   </body>
-  <script>
-  </script>
 </html>
