--- a/index.html
+++ b/index.html
@@ -32,18 +32,16 @@
     <!-- Load the Core Module -->
     <script src="modules/core/core.js"></script>
   </head>
-<div id="qunit"></div>
-<div id="qunit-fixture"></div>
   <body id="top">
     <div id='header'>
       <div id='header-content'>
         <div id='header-menu-container'>
           <div id='header-menu'>
-            <a class='menu-item header-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/home'>HOME</a>
-            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/nutrition'>NUTRITION</a>
-            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/health'>HEALTH</a>
-            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/practice'>PRACTICE</a>
-            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/study'>STUDY</a>
+            <a class='menu-item header-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/arf'>HOME</a>
+            <a class='menu-item header-menu-item' href='#book_template_page/modules%2Fbook%2Fdatabase.xml/arf/nutrition'>NUTRITION</a>
+            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/health'>HEALTH</a>
+            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/practice'>PRACTICE</a>
+            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/study'>STUDY</a>
             <a class='menu-item header-menu-item' href='data/arf.pdf'>FRAMEWORK</a>
           </div>
         </div>
@@ -52,11 +50,11 @@
     <div id='mobile-menu'>
       <div id='mobile-menu-header'>MENU</div>
       <div id='mobile-menu-content'>
-        <a class='menu-item mobile-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/home'>HOME</a>
-        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/nutrition'>NUTRITION</a>
-        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/health'>HEALTH</a>
-        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/practice'>PRACTICE</a>
-        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/home/study'>STUDY</a>
+        <a class='menu-item mobile-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/arf'>HOME</a>
+        <a class='menu-item mobile-menu-item' href='#book_template_page/modules%2Fbook%2Fdatabase.xml/arf/nutrition'>NUTRITION</a>
+        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/health'>HEALTH</a>
+        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/practice'>PRACTICE</a>
+        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/study'>STUDY</a>
         <a class='menu-item mobile-menu-item' href='data/arf.pdf'>FRAMEWORK</a>
       </div>
     </div>
