--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
       <div id='header-content'>
         <div id='header-menu-container'>
           <div id='header-menu'>
-            <a class='menu-item header-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/arf'>HOME</a>
-            <a class='menu-item header-menu-item' href='#book_template_page/modules%2Fbook%2Fdatabase.xml/arf/nutrition'>NUTRITION</a>
-            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/health'>HEALTH</a>
-            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/practice'>PRACTICE</a>
-            <a class='menu-item header-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/study'>STUDY</a>
-            <a class='menu-item header-menu-item' href='data/arf.pdf'>FRAMEWORK</a>
+            <a class='menu-item header-menu-item' href=''>HOME</a>
           </div>
         </div>
       </div>
@@ -50,17 +45,11 @@
     <div id='mobile-menu'>
       <div id='mobile-menu-header'>MENU</div>
       <div id='mobile-menu-content'>
-        <a class='menu-item mobile-menu-item' href='#book_book_page/modules%2Fbook%2Fdatabase.xml/arf'>HOME</a>
-        <a class='menu-item mobile-menu-item' href='#book_template_page/modules%2Fbook%2Fdatabase.xml/arf/nutrition'>NUTRITION</a>
-        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/health'>HEALTH</a>
-        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/practice'>PRACTICE</a>
-        <a class='menu-item mobile-menu-item' href='#book_page_page/modules%2Fbook%2Fdatabase.xml/arf/study'>STUDY</a>
-        <a class='menu-item mobile-menu-item' href='data/arf.pdf'>FRAMEWORK</a>
+        <a class='menu-item mobile-menu-item' href=''>HOME</a>
       </div>
     </div>
     <div id='body'>
       <div class='main-content'>
-        <div class='page_block'></div>
       </div>
     </div>
     <div id="back_to_top"><a href="#">Back To Top</a></div>
