Added the Simple Markdown Editor module. Added the Simple Form module. Added Lucidities Simple Backend CGI script. Updated the Markdown and Mustache modules. Moved the Back to Top button into its own module (finally).

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ARF Utils</title>
+    <title>Lucidity</title>
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" http-equiv="Content-Type">
     <link rel="icon" type="image/png" href="images/favicon.png">
 
@@ -52,7 +52,7 @@
       <div class='main-content'>
       </div>
     </div>
-    <div id="back_to_top"><a href="#">Back To Top</a></div>
+    <div class="back_to_top_block"></div>
     <div id="footer"></div>
   </body>
 </html>
