MASSIVE UPDATE: Added the Block Mustache Block to the Block module. This replaces the separate Mustache module. Fixed a bug in the backend so that the backend returns a JSON message when select results do not return any rows. Changed the Accordion block so that block headers can have nested HTML elements. Fixed bugs in the Map and Points graphs in the Graphs module. Removed broken graphs such as Sankey from the Graph module. Added the Breaks parameter to the Markdown module so that line breaks can be added. Removed broken unit tests from the Page module. Added support for callbacks to the Simple Form module. Fixed a bug in the Simple MDE module in which text does not appear in the Simple Markdown Editor. Updated the Settings.xml file to represent the addition of the Simple MDE module and the removal of the Mustache module.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
  
     <!-- Load the library stylesheets -->
     <link rel="stylesheet" type="text/css" href="lib/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="lib/qunit/qunit-2.2.0.css">
 
      <!-- Load the current theme's stylesheet -->
     <link rel="stylesheet" type="text/css" href="themes/standard/standard.css">
